--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MyTodo</string>
+    <string name="enter_the_title">Enter the Title</string>
+    <string name="submit">Submit</string>
+    <string name="fetch_todos">Fetch TODOs</string>
 </resources>
